--- a/lang/de.json
+++ b/lang/de.json
@@ -589,7 +589,7 @@
   
   "credits": "Unterstützung",
   "support_thanks": "Wenn dir VODUM gefällt und du die Entwicklung unterstützen möchtest, kannst du mir einen Kaffee spendieren.",
-  "Open_an_issue": "Issue auf GitHub eröffnen"
+  "open_an_issue": "Issue auf GitHub eröffnen"
 
 
 
