--- a/lang/en.json
+++ b/lang/en.json
@@ -598,7 +598,7 @@
   
   "credits": "Support",
   "support_thanks": "If you enjoy VODUM and want to support its development, you can buy me a coffee.",
-  "Open_an_issue": "Open an issue on GitHub"
+  "open_an_issue": "Open an issue on GitHub"
 
 
 
