--- a/lang/es.json
+++ b/lang/es.json
@@ -590,7 +590,7 @@
   
   "credits": "Apoyo",
   "support_thanks": "Si te gusta VODUM y quieres apoyar su desarrollo, puedes invitarme a un café.",
-  "Open_an_issue": "Abrir una incidencia en GitHub"
+  "open_an_issue": "Abrir una incidencia en GitHub"
 
 
 
