--- a/lang/fr.json
+++ b/lang/fr.json
@@ -592,7 +592,7 @@
   "credits": "Soutien",
   "support_thanks": "Si vous appréciez VODUM et souhaitez soutenir son développement, vous pouvez m’offrir un café.",
 
-  "Open_an_issue": "Ouvrir une issue sur GitHub"
+  "open_an_issue": "Ouvrir une issue sur GitHub"
 
 
 
