--- a/lang/it.json
+++ b/lang/it.json
@@ -589,7 +589,7 @@
   
   "credits": "Supporto",
   "support_thanks": "Se ti piace VODUM e vuoi supportarne lo sviluppo, puoi offrirmi un caffè.",
-  "Open_an_issue": "Apri una issue su GitHub"
+  "open_an_issue": "Apri una issue su GitHub"
 
 
 
